[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemys/Enemy_Laser/laser_enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_Laser.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 288, 232 )

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0 ]
}

[node name="Enemy_Laser" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -38, 0, -1, -37, 0, -37, 37, 0, 37, 1, 0, 38, -1, 38, -38, 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-06, -2.86102e-06 )
scale = Vector2( 4, 4 )

[node name="Player_detector" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detector"]
position = Vector2( 0, 232 )
shape = SubResource( 1 )

[node name="Player_follower" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Enemy_Laser_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Player_detector" to="." method="_on_Player_detector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
